Closed Bug 1346010 Opened 9 years ago Closed 9 years ago

[wasm] wasmBinaryToText->wasmTextToBinary round-trip fails

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox54 --- fixed
firefox55 --- fixed

People

(Reporter: yury, Unassigned)

Details

Attachments

(2 files)

Attached file test case
The attached js test fails with: test.js:1:1 SyntaxError: wasm text error: Function label '$global0' not found Stack: @test.js:1:1 The original wast code is generated by s2wasm.
Component: JavaScript Engine: JIT → JavaScript Engine
Comment on attachment 8845855 [details] Bug 1346010: Properly render the name of func imports when there's at least one non-func import; https://reviewboard.mozilla.org/r/118992/#review121020 Looks good. Thank you.
Attachment #8845855 - Flags: review?(ydelendik) → review+
Pushed by bbouvier@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0d073b71458b Properly render the name of func imports when there's at least one non-func import; r=yury
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment on attachment 8845855 [details] Bug 1346010: Properly render the name of func imports when there's at least one non-func import; Approval Request Comment [Feature/Bug causing the regression]: probably bug 1310949 [User impact if declined]: incorrect rendering/debugging of wasm programs (54 should have debugger support) [Is this code covered by automated tests?]: yes [Has the fix been verified in Nightly?]: yes [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: not much [Why is the change risky/not risky?]: very small targeted fix [String changes made/needed]: n/a
Attachment #8845855 - Flags: approval-mozilla-aurora?
Comment on attachment 8845855 [details] Bug 1346010: Properly render the name of func imports when there's at least one non-func import; wasm fix for aurora54
Attachment #8845855 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: