Bug 1346010: Properly render the name of func imports when there's at least one non-func import; r=yury a=jcristau

MozReview-Commit-ID: JqMfC1KrgTY

--HG--
extra : source : 0d073b71458b17c6065dec1a102ce6bd21456eb8